profile page design complete blog page is almost completed remaining thing is only profile photo like button and save button

--- a/src/components/sign-in/sign-in.styles.css
+++ b/src/components/sign-in/sign-in.styles.css
@@ -108,7 +108,7 @@ h2 {
     position: relative;
 }
 
-.container {
+.container11 {
     margin-top: 0px !important;
     margin-bottom: 0px !important;
     width: 1123px;
@@ -300,7 +300,7 @@ input[type=checkbox]:not(old):checked+label>span:before {
 }
 
 @media screen and (max-width: 992px) {
-    .container {
+    .container11 {
         width: calc( 100% - 30px);
         max-width: 100%;
         margin: 0 auto;
