--- a/src/components/profile-card/profile-card.styles.css
+++ b/src/components/profile-card/profile-card.styles.css
@@ -1,25 +1,8 @@
-.img-thumbnail {
-    /* padding: 0.25rem; */
-    background-color: #35908c;
-    border-radius: .25rem;
-    /* max-width: 50%; */
-    /* height: 50%; */
-    width: 40%;
+/* profile style start */
+
+:root {
+    font-size: 10px;
 }
-
-
-/*
-
-All grid code is placed in a 'supports' rule (feature query) at the bottom of the CSS (Line 310). 
-        
-The 'supports' rule will only run if your browser supports CSS grid.
-
-Flexbox and floats are used as a fallback so that browsers which don't support grid will still recieve a similar layout.
-
-*/
-
-
-/* Base Styles */
 
 *,
 *::before,
@@ -370,6 +353,64 @@ Remove or comment-out the code block below to see how the browser will fall-back
     }
 }
 
-.profile-trio-button {
-    font-size: 25px !important;
+
+/* profile style end */
+
+
+/* heart button style */
+
+:root {
+    --size: 50px;
+    --frames: 62;
 }
+
+input {
+    display: none;
+}
+
+.like {
+    display: block;
+    width: var(--size);
+    height: var(--size);
+    cursor: pointer;
+    border-radius: 999px;
+    overflow: visible;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    -webkit-tap-highlight-color: transparent;
+}
+
+.hearth {
+    background-image: url('https://assets.codepen.io/23500/Hashflag-AppleEvent.svg');
+    background-size: calc(var(--size) * var(--frames)) var(--size);
+    background-repeat: no-repeat;
+    background-position-x: calc(var(--size) * (var(--frames) * -1 + 2));
+    background-position-y: calc(var(--size) * 0.02);
+    width: var(--size);
+    height: var(--size);
+}
+
+input:checked+.hearth {
+    animation: like 1s steps(calc(var(--frames) - 3));
+    animation-fill-mode: forwards;
+}
+
+@keyframes like {
+    0% {
+        background-position-x: 0;
+    }
+    100% {
+        background-position-x: calc(var(--size) * (var(--frames) * -1 + 3));
+    }
+}
+
+@media (hover: hover) {
+    .like:hover {
+        background-color: #E1255E15;
+    }
+    .like .hearth:hover {
+        background-position-x: calc(var(--size) * (var(--frames) * -1 + 1));
+    }
+}
+
+
+/* heart button style end */
