--- a/src/components/profile-card/profile-card.styles.css
+++ b/src/components/profile-card/profile-card.styles.css
@@ -364,9 +364,10 @@ Remove or comment-out the code block below to see how the browser will fall-back
     --frames: 62;
 }
 
-input {
+
+/* input {
     display: none;
-}
+} */
 
 .like {
     display: block;
