--- a/src/components/sign-in/sign-in.styles.css
+++ b/src/components/sign-in/sign-in.styles.css
@@ -114,7 +114,7 @@ h2 {
     width: 1123px;
     padding-top: 135px;
     padding-bottom: 115px;
-    background-image: url("../../assets/peter-gargiulo-cGNCepznaV8-unsplash.jpg");
+    /* background-image: url("../../assets/peter-gargiulo-cGNCepznaV8-unsplash.jpg"); */
     background-repeat: no-repeat;
     background-size: cover;
     -moz-background-size: cover;
