--- a/src/components/sign-up/sign-up.styles.css
+++ b/src/components/sign-up/sign-up.styles.css
@@ -8,7 +8,7 @@ display-flex {
 
 /* @extend list-type-ulli; */
 
-list-type-ulli {
+list-type-ul li {
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -107,6 +107,7 @@ body {
     -o-background-size: cover;
     -ms-background-size: cover;
     background-position: center center;
+    /* opacity: 0.9; */
 }
 
 .main {
@@ -116,6 +117,7 @@ body {
 .container11 {
     margin-top: 0px !important;
     margin-bottom: 0px !important;
+    margin-left: 15% !important;
     width: 1123px;
     padding-top: 135px;
     padding-bottom: 115px;
@@ -134,7 +136,7 @@ body {
 .signup-content {
     width: 562px;
     margin-right: 0px;
-    background: rgba(104, 54, 85, 0.75) !important;
+    background: rgba(68, 144, 152, 0.4) !important;
     float: right;
 }
 
