design to be completed minor change will be done after some api calling

--- a/src/components/profile-card/profile-card.styles.css
+++ b/src/components/profile-card/profile-card.styles.css
@@ -10,13 +10,14 @@
     box-sizing: border-box;
 }
 
-body {
+
+/* body {
     font-family: "Open Sans", Arial, sans-serif;
     min-height: 100vh;
     background-color: #fafafa;
     color: #262626;
     padding-bottom: 3rem;
-}
+} */
 
 img {
     display: block;
