--- a/src/components/sign-up/sign-up.styles.css
+++ b/src/components/sign-up/sign-up.styles.css
@@ -21,7 +21,7 @@ a:active {
     transition: all 300ms ease 0s;
 }
 
-input,
+.signup-input,
 select,
 textarea {
     outline: none;
@@ -34,7 +34,7 @@ input::-webkit-inner-spin-button {
     margin: 0;
 }
 
-input:focus,
+.signup-input:focus,
 select:focus,
 textarea:focus {
     outline: none;
@@ -148,7 +148,7 @@ body {
     margin-bottom: 23px;
 }
 
-input {
+.signup-input {
     border: none;
     box-sizing: border-box;
     border-bottom: 1px solid #ebebeb;
