blog component done with pop up and exercise component done with static menu

--- a/src/components/Excercise/Excercise.styles.css
+++ b/src/components/Excercise/Excercise.styles.css
@@ -9,7 +9,7 @@
     color: red !important;
 }
 
-.btn-group {
+.btn-group-exercise {
     background: #B993D6;
     background: -webkit-linear-gradient(to right, #8CA6DB, #B993D6);
     background: linear-gradient(to right, #8CA6DB, #B993D6);
