--- a/src/components/blog-post/blogpost.styles.css
+++ b/src/components/blog-post/blogpost.styles.css
@@ -5,6 +5,11 @@
     border-radius: 28px;
 }
 
+body {
+    background-color: #bda372;
+    color: white;
+}
+
 .post-container {
     display: flex !important;
     justify-content: center !important;
@@ -33,7 +38,7 @@ a {
 
 .card,
 a:hover {
-    color: rgb(252, 90, 15);
+    color: rgb(36, 25, 20);
 }
 
 .profile-img {
@@ -42,9 +47,16 @@ a:hover {
     border-radius: 50%;
 }
 
-.bi-save {
+.fa-bookmark-o,
+.fa-credit-card {
     font-size: 20px;
     cursor: pointer;
+    color: black;
+}
+
+.fa-credit-card {
+    position: absolute;
+    right: 15px;
 }
 
 .like {
