--- a/src/components/blogcreate/BlogCreate.styles.css
+++ b/src/components/blogcreate/BlogCreate.styles.css
@@ -2,3 +2,22 @@
     border: 1px solid black;
     /* display: none; */
 }
+
+.blog-btn {
+    width: 100%;
+    height: 35px;
+    border: 2px solid white;
+    color: black;
+    /* background: linear-gradient(to top left, #99ff99 -17%, #66ccff 118%); */
+    background-color: #21367e;
+    /* background-color: linear-gradient(315deg, #fba8a4 0%, #dad2f3 74%); */
+}
+
+.blog-btn:hover {
+    transition: all 1.5s;
+    background-color: #2a2a72;
+    color: rgb(254, 254, 255);
+    border-radius: 5px 25px 5px 25px;
+    border-top: 5px solid rgb(248, 248, 248);
+    border-bottom: 5px solid rgb(247, 240, 240);
+}
