--- a/src/components/nutrition/Nutrition.styles.css
+++ b/src/components/nutrition/Nutrition.styles.css
@@ -6,13 +6,29 @@ textarea {
     width: 20rem;
 }
 
+#basic-addon1 {
+    height: 100%;
+}
+
+.add-ingredient-btn {
+    border: 1px solid black;
+    background: rgb(190, 181, 181);
+}
+
+
+/* .add-ingredient-btn:hover {
+    border: 1px solid blue;
+    transition: all 1s;
+    background: rgba(32, 110, 146, 0.582);
+} */
+
 .btn-grad {
     background-image: linear-gradient(to right, #000000 0%, #0f9b0f 51%, #000000 100%)
 }
 
 .btn-grad {
     margin: 10px;
-    padding: 15px 45px;
+    /* padding: 15px 45px; */
     text-align: center;
     text-transform: uppercase;
     transition: 0.5s;
@@ -28,4 +44,84 @@ textarea {
     /* change the direction of the change here */
     color: #fff;
     text-decoration: none;
+}
+
+
+/* CSS */
+
+.button-17 {
+    align-items: center;
+    appearance: none;
+    background-color: #fff;
+    border-radius: 24px;
+    border-style: none;
+    box-shadow: rgba(0, 0, 0, .2) 0 3px 5px -1px, rgba(0, 0, 0, .14) 0 6px 10px 0, rgba(0, 0, 0, .12) 0 1px 18px 0;
+    box-sizing: border-box;
+    color: #3c4043;
+    cursor: pointer;
+    display: inline-flex;
+    fill: currentcolor;
+    font-family: "Google Sans", Roboto, Arial, sans-serif;
+    font-size: 14px;
+    font-weight: 500;
+    height: 48px;
+    justify-content: center;
+    letter-spacing: .25px;
+    line-height: normal;
+    max-width: 100%;
+    overflow: visible;
+    padding: 2px 24px;
+    position: relative;
+    text-align: center;
+    text-transform: none;
+    transition: box-shadow 280ms cubic-bezier(.4, 0, .2, 1), opacity 15ms linear 30ms, transform 270ms cubic-bezier(0, 0, .2, 1) 0ms;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    width: auto;
+    will-change: transform, opacity;
+    z-index: 0;
+}
+
+.button-17:hover {
+    background: #F6F9FE;
+    color: #174ea6;
+}
+
+.button-17:active {
+    box-shadow: 0 4px 4px 0 rgb(60 64 67 / 30%), 0 8px 12px 6px rgb(60 64 67 / 15%);
+    outline: none;
+}
+
+.button-17:focus {
+    outline: none;
+    border: 2px solid #4285f4;
+}
+
+.button-17:not(:disabled) {
+    box-shadow: rgba(60, 64, 67, .3) 0 1px 3px 0, rgba(60, 64, 67, .15) 0 4px 8px 3px;
+}
+
+.button-17:not(:disabled):hover {
+    box-shadow: rgba(60, 64, 67, .3) 0 2px 3px 0, rgba(60, 64, 67, .15) 0 6px 10px 4px;
+}
+
+.button-17:not(:disabled):focus {
+    box-shadow: rgba(60, 64, 67, .3) 0 1px 3px 0, rgba(60, 64, 67, .15) 0 4px 8px 3px;
+}
+
+.button-17:not(:disabled):active {
+    box-shadow: rgba(60, 64, 67, .3) 0 4px 4px 0, rgba(60, 64, 67, .15) 0 8px 12px 6px;
+}
+
+.button-17:disabled {
+    box-shadow: rgba(60, 64, 67, .3) 0 1px 3px 0, rgba(60, 64, 67, .15) 0 4px 8px 3px;
+}
+
+#nutrtionfile {
+    /* border: 2px solid rgb(226, 144, 144) !important; */
+    width: 100%;
+    border-radius: 5px 25px 5px 25px;
+    border-top: 5px solid rgb(168, 46, 46);
+    border-bottom: 5px solid rgb(143, 4, 4);
 }
