--- a/src/components/blogcreate/BlogCreate.styles.css
+++ b/src/components/blogcreate/BlogCreate.styles.css
@@ -14,10 +14,10 @@
 }
 
 .blog-btn:hover {
-    transition: all 1.5s;
-    background-color: #2a2a72;
-    color: rgb(254, 254, 255);
-    border-radius: 5px 25px 5px 25px;
-    border-top: 5px solid rgb(248, 248, 248);
-    border-bottom: 5px solid rgb(247, 240, 240);
+    transition: all 1.5s !important;
+    background-color: #2a2a72 !important;
+    color: rgb(254, 254, 255) !important;
+    border-radius: 5px 25px 5px 25px !important;
+    border-top: 5px solid rgb(248, 248, 248) !important;
+    border-bottom: 5px solid rgb(247, 240, 240) !important;
 }
