--- a/src/components/modalpopup/modalpopup.styles.css
+++ b/src/components/modalpopup/modalpopup.styles.css
@@ -4,7 +4,7 @@
 
 .add-exercise {
     margin: 10px;
-    /* padding: 15px 45px; */
+    padding: 15px 45px;
     text-align: center;
     text-transform: uppercase;
     transition: 0.5s;
