--- a/src/components/spinner/spinner.styles.css
+++ b/src/components/spinner/spinner.styles.css
@@ -1,54 +1,80 @@
-/* body{
-	height:100vh;
-	display:flex;
-	align-items:center;
-	justify-content:center;
-	position:relative;
-	background-color:#02143c;
-} */
+:root {
+    --effect: hover 1s linear infinite;
+}
 
-.container-spinner {
-    background-color: aliceblue;
+
+/* *{
+     margin:0;
+  }
+  
+  body {
     display: flex;
-    position: relative;
-    height: 100vh;
     width: 100vw;
+    height: 100vh;
+    background: black;
     align-items: center;
     justify-content: center;
+  } */
+
+.spinner {
+    text-align: center;
 }
 
-.circle {
-    position: absolute;
-    border-radius: 50%;
-    animation: spin 3s linear infinite;
-    display: flex;
+.loading {
+    display: inline-block;
+    text-transform: uppercase;
+    text-align: center;
+    font-size: 4em;
+    font-family: arial;
+    font-weight: 600;
+    transform: scale(.5);
+    color: #121212;
+    -webkit-text-stroke: 2px gray;
 }
 
-.circle-red {
-    border: 20px solid rgba(252, 33, 33, .2);
-    border-right: 20px solid rgb(252, 33, 33);
-    animation-delay: .5s;
-    width: 150px;
-    height: 150px;
+.loading:nth-child(1) {
+    animation: var(--effect);
 }
 
-.circle-green {
-    border: 20px solid rgba(198, 200, 99, .2);
-    border-right: 20px solid rgb(198, 200, 99);
-    animation-delay: 1s;
-    width: 100px;
-    height: 100px;
+.loading:nth-child(2) {
+    animation: var(--effect) .125s;
 }
 
-.circle-blue {
-    border: 20px solid rgba(18, 198, 255, .2);
-    border-right: 20px solid rgb(18, 198, 255);
-    width: 200px;
-    height: 200px;
+.loading:nth-child(3) {
+    animation: var(--effect) .25s;
 }
 
-@keyframes spin {
-    100% {
-        transform: rotate3D(1, .5, .75, 720deg) rotateZ(720deg);
+.loading:nth-child(4) {
+    animation: var(--effect) .375s;
+}
+
+.loading:nth-child(5) {
+    animation: var(--effect) .5s;
+}
+
+.loading:nth-child(6) {
+    animation: var(--effect) .675s;
+}
+
+.loading:nth-child(7) {
+    animation: var(--effect) .75s;
+}
+
+@keyframes hover {
+    0% {
+        transform: scale(.5);
+        color: #121212;
+        -webkit-text-stroke: 2px gray;
+    }
+    20% {
+        transform: scale(1);
+        color: pink;
+        -webkit-text-stroke: 3px red;
+        filter: drop-shadow(0 0 1px black)drop-shadow(0 0 1px black)drop-shadow(0 0 3px red)drop-shadow(0 0 5px red)hue-rotate(10turn);
+    }
+    50% {
+        transform: scale(.5);
+        color: #121212;
+        -webkit-text-stroke: 2px gray;
     }
 }
