--- a/src/components/mypost/mypost.css
+++ b/src/components/mypost/mypost.css
@@ -72,9 +72,13 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 2rem;
-    margin: 4rem 5vw;
+    margin: 15px;
     padding: 0;
     list-style-type: none;
+}
+
+ul {
+    list-style: none;
 }
 
 .card-myblog {
@@ -130,7 +134,6 @@
 
 .card__arc path {
     fill: var(--surface-color);
-    /* d: path("M 40 80 c 22 0 40 -22 40 -40 v 40 Z"); */
 }
 
 .card-myblog:hover .card__header {
@@ -172,4 +175,9 @@
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 3;
     overflow: hidden;
+}
+
+.myblog-li {
+    list-style-type: none !important;
+    width: 25vw;
 }
